fixed footer overlap bug
inspiration section height increased, as it was causing the issues

--- a/src/components/inspiration-section/inspiration-section.styles.scss
+++ b/src/components/inspiration-section/inspiration-section.styles.scss
@@ -1,7 +1,7 @@
 .inspiration {
   margin-top: 2.5vh;
   text-align: center;
-  height: 100vh;
+  min-height: 100vh;
   
   h1 {
     margin-bottom: 10vh;
